package app.persistence.mappers;

public class OfferMapper {
}
